Added Redis cache
